--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* here we style the content between header and footer */
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 /* SVG PATH */
 .background_shape {
