--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
 /* here we style the content between header and footer */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* SVG PATH */
+body {
+    background-image: linear-gradient(#02151C, #556267);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 100vh;
+    width: 100%;
+}
+
+
 .background_shape {
     position: absolute;
     z-index: -1;
 }
+
