--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,7 @@ img {
 header {
     display: flex;
     justify-content: space-between;
+    border-bottom: white 3.5px solid;
 }
 
 nav ul {
@@ -30,11 +31,25 @@ nav ul {
 }
 
 nav ul li {
-    padding: 10px 14px;
+    padding: 10px 1px;
     width: 100px;
     text-align: center;
 }
 
 nav ul li a {
     text-decoration: none;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+/*Footer*/
+
+footer {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    text-align: center;
+    height: 6vh;
+    padding: 10px;
 }
