--- a/css/common.css
+++ b/css/common.css
@@ -21,9 +21,22 @@ img {
 header {
     display: flex;
     justify-content: space-between;
+     align-items: center;
+}
+.line {
     border-bottom: white 3.5px solid;
+    z-index: 2;
 }
 
+.logo img {
+    max-width: 250px;
+    z-index: 2;
+}
+
+.name img {
+    max-height: 80px;
+    z-index: 2;
+}
 nav ul {
     list-style: none;
     padding: 0;
@@ -52,4 +65,12 @@ footer {
     text-align: center;
     height: 6vh;
     padding: 10px;
+}
+
+/*Media Queries*/
+
+@media only screen and (max-width: 800px) {
+    .logo img {
+        max-width: auto;
+    }
 }
