--- a/css/products.css
+++ b/css/products.css
@@ -1,45 +1,62 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
 /* media queries */
-@media only screen and (min-width: 1054px) {
+@media only screen and (min-width: 254px) {
     main {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: auto;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 2rem;
+        margin: 1rem 5rem;
     }
 }
 
 
 
 
-body {
-    background: grey;
-}
+body {}
+
 .item {
-/*    background-color: #9B4F0F;*/
+    /*    background-color: #9B4F0F;*/
     text-align: center;
     display: flex;
     flex-flow: column;
     padding: 1rem 2rem;
     margin: 2rem 5rem;
-/*    box-shadow: 9px 7px;*/
 }
+
 .item h2 {
     font-family: syncopate, sans-serif;
     font-size: 1.3rem;
     margin: 2rem;
 }
+
 img {
-    display: block;
-    width: 80%;
+    width: 100%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
 
 }
+
 .item h3 {
     font-family: syne, sans-serif;
 }
+
 .item h3 span {
     font-size: 1.7rem;
 }
 
+nav {
+    display: flex;
+    align-items: flex-end;
+}
 
+a {
+    font-family: syne, sans-serif;
+    font-size: 1.2rem;
+}
+
+.best_sellers h2 {
+    font-family: syncopate, sans-serif;
+    font-size: 1.4rem;
+}
