--- a/css/common.css
+++ b/css/common.css
@@ -26,6 +26,37 @@ img {
     --text-color: #fff;
 }
 
+/* HEADER */
+
+header {
+    text-align: center;
+}
+
+nav {
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    padding: 10px 14px;
+    text-align: center;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-family: var(--primary-font);
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
 
 /*Footer*/
 
@@ -33,7 +64,6 @@ footer {
     color: white;
     padding: 20px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,5 +87,33 @@ footer p {
 @media only screen and (max-width: 800px) {
     .logo img {
         max-width: auto;
+    }
+}
+
+@media only screen and (min-width: 920px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
+    nav {
+        padding: 0 20px;
+    }
+
+    .line {
+        position: relative;
+    }
+
+    .line::before {
+        border-bottom: white 3.5px solid;
+        z-index: 3;
+        display: block;
+        position: absolute;
+        content: '';
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
     }
 }
