--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p {
         left: 0;
         max-width: 100%;
         height: auto;
-        max-height: 70%;
+        width: 700px;
         z-index: 1;
         display: block;
     }
@@ -77,10 +77,6 @@ p {
 
     .name img {
         max-height: 80px;
-    }
-
-    nav {
-        z-index: 5;
     }
 
 
