--- a/css/products.css
+++ b/css/products.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
 }
+
 /* media queries */
 @media only screen and (min-width: 254px) {
     main {
@@ -12,20 +13,20 @@
     }
 }
 
-main{
+main {
     border-top: 3px solid white;
     border-left: 3px solid white;
 }
 
 
 body {
-    background: rgb(32,32,32);
-    background: linear-gradient(180deg, rgba(32,32,32,1) 0%, rgba(61,70,68,1) 89%);
+    background: rgb(32, 32, 32);
+    background: linear-gradient(180deg, rgba(32, 32, 32, 1) 0%, rgba(61, 70, 68, 1) 89%);
     margin: 0;
     color: white;
 }
 
-.item {
+.product {
     border-radius: 20%;
     border: 1px solid lightskyblue;
     text-align: center;
@@ -36,7 +37,7 @@ body {
     width: 17rem;
 }
 
-.item h2 {
+.product h2 {
     font-family: syncopate, sans-serif;
     font-size: 1.3rem;
     text-align: center;
@@ -44,16 +45,16 @@ body {
     margin-bottom: 1rem;
 }
 
-.item img {
+.product img {
     width: 100%;
     height: 100%;
 }
 
-.item h3 {
+.product h3 {
     font-family: syne, sans-serif;
 }
 
-.item h3 span {
+.product h3 span {
     font-size: 1.7rem;
 }
 
@@ -74,12 +75,15 @@ h2 {
     margin-bottom: 2%;
     margin-top: 2%;
 }
-.best_sellers{
+
+.best_sellers {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-bottom: 2%;
 }
-.item1{
+
+/*
+.item1 {
     font-family: syncopate, sans-serif;
     font-size: 1.3rem;
     text-align: center;
@@ -87,17 +91,50 @@ h2 {
     margin-bottom: 1rem;
 
 }
-.item2{
+
+.item2 {
     font-family: syncopate, sans-serif;
     font-size: 1.3rem;
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.item3{
+
+.item3 {
     font-family: syncopate, sans-serif;
     font-size: 1.3rem;
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+*/
+
+.container {
+    position: relative;
+}
+.container .btn {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #1d2833;
+    border: 1px solid #45a29e;
+    font-family: syne, sans-serif;
+    color: aliceblue;
+    border-radius: 25%;
+}
+
+.container .btn:hover {
+    background-color: darkcyan;
+}
+}
+.container img {
+    position: relative;
+}
+
+
+.filters {
+    display: inline-flex;
+}
+.filters summary {
+    margin-left: 2rem;
 }
