--- a/css/common.css
+++ b/css/common.css
@@ -37,6 +37,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: white solid 2px;
 }
 
 footer p {
