--- a/css/style.css
+++ b/css/style.css
@@ -54,16 +54,61 @@ h1 {
     font-family: var(--third-font);
     font-weight: 600;
     color: white;
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
+    padding: 20px;
 }
 
 p {
     font-family: var(--third-font);
+    font-size: 25px;
     font-weight: 300;
     color: white;
     padding: 10px;
 
+}
+
+/*MAIN*/
+
+.copyw {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+}
+
+.moretext {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+}
+
+.p2 {
+    flex: 50%;
+}
+
+.phone_app {
+    display: flex;
+    flex: 50%;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    right: 10px;
+    padding: 1rem;
+}
+
+button {
+    height: 40px;
+    width:25%;
+    background: white;
+    border: 2px white solid;
+    color: black;
+    font-family: var(--primary-font);
+    font-weight: 500;
+    font-size: 20px;
+    margin: 12px;
 }
 
 /* MEDIA QUERIES */
