--- a/css/products.css
+++ b/css/products.css
@@ -27,7 +27,7 @@ body {
 }
 
 .product {
-    border-radius: 20%;
+    border-radius: 10%;
     border: 1px solid lightskyblue;
     text-align: center;
     display: flex;
@@ -48,6 +48,7 @@ body {
 .product img {
     width: 100%;
     height: 100%;
+    border-radius: 7%;
 }
 
 .product h3 {
@@ -56,16 +57,6 @@ body {
 
 .product h3 span {
     font-size: 1.7rem;
-}
-
-nav {
-    display: flex;
-    align-items: flex-end;
-}
-
-a {
-    font-family: syne, sans-serif;
-    font-size: 1.2rem;
 }
 
 h2 {
@@ -78,8 +69,11 @@ h2 {
 
 .best_sellers {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 2%;
+}
+.best_sellers img {
+    border-radius: 10%;
 }
 
 /*
@@ -111,6 +105,7 @@ h2 {
 
 .container {
     position: relative;
+    margin: 0 3rem;
 }
 .container .btn {
     position: absolute;
