--- a/css/products.css
+++ b/css/products.css
@@ -3,34 +3,6 @@
     margin: 0;
 }
 
-<<<<<<< HEAD
-=======
-.name img {
-    max-height: 80px;
-}
-
-header {
-    display: flex;
-    align-items: center;
-}
-
->>>>>>> origin/master
-/* media queries */
-@media only screen and (min-width: 254px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 2rem;
-        margin: 1rem 5rem;
-    }
-}
-
-main {
-    border-top: 3px solid white;
-    border-left: 3px solid white;
-}
-
-
 body {
     background: rgb(32, 32, 32);
     background: linear-gradient(180deg, rgba(32, 32, 32, 1) 0%, rgba(61, 70, 68, 1) 89%);
@@ -38,19 +10,69 @@ body {
     color: white;
 }
 
+main {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 2rem;
+    /*    margin: 1rem 5rem;*/
+}
+
+.name img {
+    max-height: 80px;
+}
+
+h1 {
+    font-family: 'Syncopate', sans-serif;
+    font-size: 1.4rem;
+    text-align: center;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
+.best_sellers {
+    display: grid;
+    justify-content: center;
+    margin-bottom: 2%;
+}
+
+.best_sellers img {
+    border-radius: 10px;
+}
+
+.container {
+    position: relative;
+    margin: 0 3rem;
+}
+
+.container .btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: #1d2833;
+    border: 1px solid #45a29e;
+    font-family: 'syne', sans-serif;
+    color: aliceblue;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.container .btn:hover {
+    background-color: darkcyan;
+}
+
 .product {
-    border-radius: 10%;
+    border-radius: 10px;
     border: 1px solid lightskyblue;
     text-align: center;
     display: flex;
     flex-flow: column;
     padding: 1rem 2rem;
-    margin: 2rem 5rem;
+    margin: 2rem auto;
     width: 17rem;
 }
 
 .product h2 {
-    font-family: syncopate, sans-serif;
+    font-family: 'Syncopate', sans-serif;
     font-size: 1.3rem;
     text-align: center;
     margin-top: 1rem;
@@ -60,92 +82,170 @@ body {
 .product img {
     width: 100%;
     height: 100%;
-    border-radius: 7%;
+    border-radius: 10px;
 }
 
 .product h3 {
-    font-family: syne, sans-serif;
+    font-family: 'Syne', sans-serif;
 }
 
-.product h3 span {
-    font-size: 1.7rem;
-}
+/* CATEGORIES */
 
-h2 {
-    font-family: syncopate, sans-serif;
-    font-size: 1.4rem;
-    text-align: center;
-    margin-bottom: 2%;
-    margin-top: 2%;
-}
-
-.best_sellers {
+.categories ul {
+    list-style: none;
+    padding: 0;
     display: flex;
-    justify-content: center;
-    margin-bottom: 2%;
-}
-<<<<<<< HEAD
-.best_sellers img {
-    border-radius: 10%;
 }
 
-/*
-=======
-
->>>>>>> origin/master
-.item1 {
-    font-family: syncopate, sans-serif;
-    font-size: 1.3rem;
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-
+.categories ul li:first-child {
+    margin-left: 0;
 }
 
-.item2 {
-    font-family: syncopate, sans-serif;
-    font-size: 1.3rem;
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+.categories ul li {
+    margin: 4px 8px;
 }
 
-.item3 {
-    font-family: syncopate, sans-serif;
-    font-size: 1.3rem;
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-*/
-
-.container {
-    position: relative;
-    margin: 0 3rem;
-}
-.container .btn {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: #1d2833;
-    border: 1px solid #45a29e;
-    font-family: syne, sans-serif;
-    color: aliceblue;
-    border-radius: 25%;
+.categories ul {
+    list-style: none;
+    padding: 0;
 }
 
-.container .btn:hover {
-    background-color: darkcyan;
-}
-}
-.container img {
-    position: relative;
-}
-
+/* FILTERS */
 
 .filters {
     display: inline-flex;
 }
+
 .filters summary {
-    margin-left: 2rem;
+    margin: 0 10px;
+}
+
+.filtration {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px;
+    align-items: flex-end;
+    margin: 0 5rem;
+}
+
+.filters button {
+    display: block;
+    width: 140px;
+}
+
+/* MODAL'S STYLING */
+
+.hide {
+    display: none;
+}
+
+.modal-background {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    position: relative;
+    background-color: rgb(32, 32, 32);
+    padding: 40px;
+    margin: auto;
+    margin-top: 10px;
+    width: 75%;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: lightgray;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: darkgray;
+}
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+#modal-btn {
+    border: 2px solid lightskyblue;
+    background: none;
+    padding: 10px 16px;
+    color: white;
+    border-radius: 4px;
+    text-transform: lowercase;
+    margin: auto;
+    width: 140px;
+    margin-top: 5px;
+}
+
+#modal-btn:hover {
+    background: lightskyblue;
+}
+
+/* media queries */
+
+@media only screen and (min-width: 900px) {
+
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+}
+
+@media only screen and (min-width: 600px) {
+    main {
+        border-top: 3px solid white;
+        border-left: 3px solid white;
+        margin: 1rem 5rem;
+    }
+
+
+    .product {
+        margin: 2rem 5rem;
+    }
+
+    .best_sellers {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+    }
+
 }
