--- a/css/products.css
+++ b/css/products.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     color: white;
 }
+
 main {
     width: 80%;
     margin: auto;
@@ -22,6 +23,10 @@ main {
 
 .name img {
     max-height: 80px;
+}
+
+li a:hover {
+    color: #45A29E;
 }
 
 h1 {
@@ -44,24 +49,36 @@ h1 {
 
 .container {
     position: relative;
-    margin: 0 3rem;
+    margin: auto;
+    padding: 0;
 }
 
 .container .btn {
     position: absolute;
-    bottom: 0;
+    bottom: 2%;
     right: 0;
+    left: 0;
     background-color: #1d2833;
     border: 1px solid #45a29e;
     font-family: 'syne', sans-serif;
     color: aliceblue;
     border-radius: 5px;
-    margin: 5px;
+    margin: auto;
+}
+
+.container img:hover {
+    z-index: 1;
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
 .container .btn:hover {
     background-color: darkcyan;
 }
+
 .container .btn:active {
     background-color: red;
 }
@@ -75,6 +92,20 @@ h1 {
     padding: 1rem 2rem;
     margin: 0rem auto;
     width: 17rem;
+    z-index: 1;
+    max-width: 100%;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.product:hover {
+    z-index: 1;
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: 1.2;
+    filter: alpha(opacity=50);
 }
 
 .product h2 {
@@ -102,27 +133,38 @@ h1 {
 
 .filters {
     display: flex;
-    margin: 2.5rem 0rem 1rem;
+    margin: 3rem 0rem 0rem;
     justify-content: flex-start;
     margin-left: 4rem;
 
 }
+
 details {
     margin-right: 4rem;
 }
+
 summary {
     position: relative;
     font-family: syne, sans-serif;
+    cursor: pointer;
 }
+
+summary:hover {
+    color: #45A29E;
+}
+
 .filters .button {
     position: absolute;
+    z-index: 2;
+}
+
+.filters button {
+    cursor: pointer;
 }
 
 
 
-.filtration {
-    border-bottom: 3px solid white;
-}
+
 
 .filters button {
     display: block;
@@ -130,8 +172,9 @@ summary {
     background-color: #1d2833;
     border-radius: 7%;
     color: white;
-    font-family: syne,sans-serif;
+    font-family: syne, sans-serif;
 }
+
 .filters button:hover {
     background-color: darkcyan;
 }
@@ -242,44 +285,32 @@ summary {
     }
 
     .best_sellers {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 2%;
+        display: block;
+        text-align: center;
+        margin: 0 auto;
     }
+
     .best_sellers {
         margin-bottom: 2.5rem;
     }
+
     h1 {
         margin-top: 2.5rem;
         margin-bottom: 1.5rem;
     }
+
     .categories {
         display: none;
     }
+
     .filtration {
         margin-top: 4rem;
     }
+
     .filters {
         display: flex;
         justify-content: space-evenly;
         margin-left: 0;
     }
-    .container .btn {
-        display: block;
-    position: absolute;
-    bottom: -2.4rem;
-    right: -.3rem;
-    background-color: #1d2833;
-    border: 1px solid #45a29e;
-    font-family: 'syne', sans-serif;
-    color: aliceblue;
-    border-radius: 5px;
-    margin: 5px;
-}
-
-.container .btn:hover {
-    background-color: darkcyan;
-}
-
 
 }
