--- a/css/products.css
+++ b/css/products.css
@@ -4,12 +4,14 @@
 }
 
 body {
-    background: rgb(32, 32, 32);
-    background: linear-gradient(180deg, rgba(32, 32, 32, 1) 0%, rgba(61, 70, 68, 1) 89%);
-    margin: 0;
+    background: rgb(2, 21, 28);
+    background: linear-gradient(180deg, rgba(2, 21, 28, 1) 0%, rgba(85, 98, 103, 1) 50%, rgba(2, 21, 28, 1) 100%);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: auto;
+    width: 100%;
     color: white;
 }
-
 main {
     width: 80%;
     margin: auto;
