--- a/css/products.css
+++ b/css/products.css
@@ -12,10 +12,11 @@ body {
     width: 100%;
     color: white;
 }
+
 main {
     width: 80%;
     margin: auto;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -58,22 +59,24 @@ h1 {
 .container .btn {
     position: absolute;
     bottom: 2%;
-    right: 0;
-    left: 0;
+    right: 0%;
     background-color: #1d2833;
-    border: 1px solid #45a29e;
-    font-family: 'syne', sans-serif;
+    font-family: 'Syne', sans-serif;
     color: aliceblue;
-    border-radius: 5px;
+    border-radius: 4px 4px 10px 4px;
     margin: auto;
+    padding: 3px 8px;
 }
+
 .container img:hover {
+    /*
     z-index: 1;
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+*/
     opacity: 0.5;
-    filter: alpha(opacity=50);
+    /*    filter: alpha(opacity=50);*/
 }
 
 .container .btn:hover {
@@ -136,7 +139,7 @@ h1 {
     display: flex;
     margin: 3rem 0rem 0rem;
     justify-content: flex-start;
-    margin-left: 4rem;
+    margin-left: 9.5rem;
 
 }
 
@@ -163,8 +166,9 @@ summary:hover {
     cursor: pointer;
 }
 
-
-
+button {
+    cursor: pointer;
+}
 
 
 .filters button {
@@ -252,19 +256,19 @@ summary:hover {
 #modal-btn {
     border: 2px solid lightskyblue;
     background: none;
-    padding: 10px 16px;
+    padding: 6px 10px;
     color: white;
     border-radius: 4px;
     text-transform: uppercase;
     margin: auto;
-    width: 140px;
+    width: 120px;
     margin-top: 5px;
     font-family: syne, sans-serif;
 }
 
 #modal-btn:hover {
     background: lightskyblue;
-    color: black;
+    color: white;
 }
 
 /* media queries */
@@ -313,20 +317,25 @@ summary:hover {
         justify-content: space-evenly;
         margin-left: 0;
     }
+
+    .container {
+        margin: auto;
+        width: fit-content;
+    }
+
     .container img {
         margin-bottom: 1.5rem;
     }
+
     .container .btn {
-    position: absolute;
-    bottom: 15%;
-    right: 0;
-    left: 0;
-    background-color: #1d2833;
-    border: 1px solid #45a29e;
-    font-family: 'syne', sans-serif;
-    color: aliceblue;
-    border-radius: 5px;
-    margin: auto;
-}
+        position: absolute;
+        bottom: 15%;
+        right: 0;
+        background-color: #1d2833;
+        font-family: 'syne', sans-serif;
+        color: aliceblue;
+        border-radius: 5px;
+        margin: auto;
+    }
 
 }
